<resources>
    <string name="app_name">WhatsApp</string>
    <string name="camera">camera</string>
    <string name="search">search</string>
    <string name="new_group">New group</string>
    <string name="new_broadcast">New broadcast</string>
    <string name="link_devices">Link devices</string>
    <string name="starred_messages">Starred messages</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="pay">Pay</string>
    <string name="video">Video</string>
    <string name="audio">Audio</string>
    <string name="_91_1234567890">+91 1234567890</string>
    <string name="name">Name</string>
    <string name="signup">SignUp</string>
    <string name="share">Share</string>
    <string name="edit">Edit</string>
    <string name="view_in_address_book">View in address book</string>
    <string name="verify_security_code">Verify security code</string>
</resources>