<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menuCamera"
        app:showAsAction="ifRoom"
        android:icon="@drawable/camera"
        android:title="@string/camera"/>
    <item android:id="@+id/menuSearch"
        app:showAsAction="ifRoom"
        android:icon="@drawable/search"
        android:title="@string/search"/>

    <item android:id="@+id/menuNewGroup"
        app:showAsAction="ifRoom"
        android:title="@string/new_group"/>
    <item android:id="@+id/menuNewBroadcast"
        app:showAsAction="ifRoom"
        android:icon="@drawable/camera"
        android:title="@string/new_broadcast"/>
    <item android:id="@+id/menuLinkDevices"
        app:showAsAction="ifRoom"
        android:icon="@drawable/camera"
        android:title="@string/link_devices"/>
    <item android:id="@+id/menuStarredMessage"
        app:showAsAction="ifRoom"
        android:icon="@drawable/camera"
        android:title="@string/starred_messages"/>
    <item android:id="@+id/menuPayment"
        app:showAsAction="ifRoom"
        android:icon="@drawable/camera"
        android:title="Payments"/>
    <item android:id="@+id/menuSetting"
        app:showAsAction="ifRoom"
        android:icon="@drawable/camera"
        android:title="@string/settings"/>
</menu>