<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.UserProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/activity_user_profile_xml_constraintlayout2_scene">

        <androidx.constraintlayout.motion.widget.MotionLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutDescription="@xml/activity_user_profile_xml_constraintlayout_scene"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imgBack"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_margin="10dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/black" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgLogo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_account"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:menu="@menu/user_profile_menu" />
        </androidx.constraintlayout.motion.widget.MotionLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

            <TextView
                android:id="@+id/txtName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/_91_1234567890"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtName" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtNumber">

                <LinearLayout
                    android:id="@+id/llAudio"
                    android:layout_width="50dp"
                    android:layout_height="70dp"
                    android:orientation="vertical"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/ic_phone"
                        app:tint="@color/toolbar" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="@string/audio"
                        android:textColor="@color/toolbar" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llVideo"
                    android:layout_width="50dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="20dp"
                    android:orientation="vertical"
                    app:layout_constraintStart_toEndOf="@+id/llAudio"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/ic_video"
                        app:tint="@color/toolbar" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="@string/video"
                        android:textColor="@color/toolbar" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llCurrency"
                    android:layout_width="50dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="20dp"
                    android:orientation="vertical"
                    app:layout_constraintStart_toEndOf="@+id/llVideo"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/ic_currency"
                        app:tint="@color/toolbar" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="@string/pay"
                        android:textColor="@color/toolbar" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llSearch"
                    android:layout_width="50dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="20dp"
                    android:orientation="vertical"
                    app:layout_constraintStart_toEndOf="@+id/llCurrency"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/search"
                        app:tint="@color/toolbar" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="@string/search"
                        android:textColor="@color/toolbar" />

                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="@color/view"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@+id/view2">

            <TextView
                android:id="@+id/txtCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="3"
                android:text="Busy"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtJoinDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="sep 22,2018"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@+id/txtCategory" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="15dp"
            android:background="@color/view"
            app:layout_constraintTop_toBottomOf="@+id/constraint" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/view3">

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_baseline_do_disturb_24"
                    app:tint="@color/txtRed" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="Block "
                    android:textColor="@color/txtRed"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/txtDisName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Name"
                    android:textColor="@color/txtRed"
                    android:textSize="16dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/disliked_post"
                    app:tint="@color/txtRed" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="Report "
                    android:textColor="@color/txtRed"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/txtDisName2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Name"
                    android:textColor="@color/txtRed"
                    android:textSize="16dp" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/view4"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="15dp"
            android:background="@color/view"
            app:layout_constraintTop_toBottomOf="@+id/constraint2" />
    </androidx.constraintlayout.motion.widget.MotionLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>